--- a/docs/src/content/docs/keybindings/neovim.mdx
+++ b/docs/src/content/docs/keybindings/neovim.mdx
@@ -12,9 +12,7 @@ A comprehensive reference of all custom keybindings configured in Neovim.
 
 <Aside icon="vim" title="Neovim Leader Key: <Space>">
   Please note that many of the keybindings listed below reference actions or
-  commands provided by third party extensions. Plugins, tree-sitter parsers,
-  formatters, linters and LSP's will be installed the very first time Neovim is
-  opened.
+  commands provided by third party extensions.
 </Aside>
 
 <div class="keybindings-page">
