--- a/docs/src/content/docs/keybindings/tmux.mdx
+++ b/docs/src/content/docs/keybindings/tmux.mdx
@@ -98,11 +98,11 @@ A comprehensive reference of all custom keybindings configured in Tmux.
 
 ### Open
 
-| Key      | Description                  |
-| -------- | ---------------------------- |
-| `Ctrl+o` | Open selection with \$EDITOR |
-| `o`      | Open selection with xdg-open |
-| `S`      | Search selection on Google   |
+| Key      | Description                    |
+| -------- | ------------------------------ |
+| `Ctrl+o` | Open selection with `$EDITOR`  |
+| `o`      | Open selection with `XDG-OPEN` |
+| `S`      | Search selection on Google     |
 
 ### Gentrify
 
@@ -122,8 +122,8 @@ A comprehensive reference of all custom keybindings configured in Tmux.
 | Key            | Description                           |
 | -------------- | ------------------------------------- |
 | `prefix + Tab` | Open fuzzy finder for text extraction |
-| `Enter`        | Copy selected text (in extrakto)      |
-| `Tab`          | Insert selected text (in extrakto)    |
+| `Enter`        | Copy selected text                    |
+| `Tab`          | Insert selected text                  |
 
 ### Notify
 
