--- a/bin/install
+++ b/bin/install
@@ -64,7 +64,6 @@ base::packages() {
 base::tmux() {
 
     # https://github.com/tmux-plugins/tpm
-    # https://github.com/eradman/entr
 
     common::start_spinner
 
@@ -73,14 +72,20 @@ base::tmux() {
 
     [[ -d $TMUX_TPM_PATH ]] || git clone --depth 1 --quiet $TMUX_TPM_GH_REPOSITORY $TMUX_TPM_PATH
 
-    [[ $(command -v entr) ]] && {
-        common::stop_spinner
-        return 0
-    }
+    base::tmux::entr
+    base::tmux::gitmux
+
+    common::stop_spinner
+}
+
+base::tmux::entr() {
+
+    # https://github.com/eradman/entr
+
+    [[ $(command -v entr) ]] && return 0
 
     common::has_pkg "entr" && {
         sudo $PKG_MANAGER install -y entr >/dev/null
-        common::stop_spinner
         return 0
     }
 
@@ -88,16 +93,41 @@ base::tmux() {
     local -r ENTR_REPOSITORY_URL="https://github.com/eradman/entr.git"
     local -r ENTR_REPOSITORY_BASENAME=$(basename $ENTR_REPOSITORY_URL .git)
 
-    (
-        git clone --depth 1 --branch "$ENTR_LATEST_TAG" "$ENTR_REPOSITORY_URL" "$SANDBOX/$ENTR_REPOSITORY_BASENAME" &>/dev/null && cd $_ || {
-            log::error "Couldn't clone repository: $ENTR_REPOSITORY_URL"
-        }
-        ./configure >/dev/null && PREFIX=$(dirname $XDG_BIN_HOME) make install &>/dev/null || {
-            log::error "Couldn't compile and install $ENTR_REPOSITORY_BASENAME"
-        }
-    )
+    git clone --depth 1 --branch "$ENTR_LATEST_TAG" "$ENTR_REPOSITORY_URL" "$SANDBOX/$ENTR_REPOSITORY_BASENAME" &>/dev/null || {
+        log::error "Couldn't clone repository: $ENTR_REPOSITORY_URL"
+    }
 
-    common::stop_spinner
+    (cd "$SANDBOX/$ENTR_REPOSITORY_BASENAME" && ./configure >/dev/null && PREFIX=$(dirname "$XDG_BIN_HOME") make install &>/dev/null) || {
+        log::error "Couldn't compile and install $ENTR_REPOSITORY_BASENAME"
+    }
+}
+
+base::tmux::gitmux() {
+
+    # https://github.com/arl/gitmux
+
+    [[ $(command -v gitmux) ]] && return 0
+
+    local -r GITMUX_VERSION=$(curl -s "https://api.github.com/repos/arl/gitmux/releases/latest" | jq -r '.tag_name')
+    local -r GITMUX_RELEASE_BASE_URL="https://github.com/arl/gitmux/releases/download"
+
+    local -r GITMUX_CHECKSUMS_DOWNLOAD_URL="$GITMUX_RELEASE_BASE_URL/$GITMUX_VERSION/checksums.txt"
+    local -r GITMUX_ARCHIVE_DOWNLOAD_URL="$GITMUX_RELEASE_BASE_URL/$GITMUX_VERSION/gitmux_${GITMUX_VERSION}_${OS}_${ARCH}.tar.gz"
+
+    local -r GITMUX_CHECKSUMS_FILENAME=$(basename $GITMUX_CHECKSUMS_DOWNLOAD_URL)
+    local -r GITMUX_ARCHIVE_NAME=$(basename $GITMUX_ARCHIVE_DOWNLOAD_URL)
+
+    curl -fsSLO --output-dir $SANDBOX $GITMUX_CHECKSUMS_DOWNLOAD_URL
+    curl -fsSLO --output-dir $SANDBOX $GITMUX_ARCHIVE_DOWNLOAD_URL
+
+    local -r GITMUX_CHECKSUM=$(grep "$GITMUX_ARCHIVE_NAME" "$SANDBOX/$GITMUX_CHECKSUMS_FILENAME" | cut -d' ' -f1)
+
+    echo $GITMUX_CHECKSUM $SANDBOX/$GITMUX_ARCHIVE_NAME | sha256sum --check &>/dev/null || {
+        log::error "$GITMUX_ARCHIVE_NAME checksum verification failed."
+    }
+
+    tar -xzf "$SANDBOX/$GITMUX_ARCHIVE_NAME" -C $SANDBOX
+    install "$SANDBOX/gitmux" "$XDG_BIN_HOME/gitmux"
 }
 
 base::ueberzugpp() {
@@ -182,9 +212,11 @@ base::app_image_launcher() {
 
     local -r APP_IMAGE_LAUNCHER_VERSION=2.2.0
     local -r APP_IMAGE_LAUNCHER_CI_ID=travis995.0f91801
-    local -r APP_IMAGE_LAUNCHER_GITHUB_RELEASE_BASE_URL="https://github.com/TheAssassin/AppImageLauncher/releases/download"
-    local -r APP_IMAGE_LAUNCHER_RPM_DOWNLOAD_URL="$APP_IMAGE_LAUNCHER_GITHUB_RELEASE_BASE_URL/v${APP_IMAGE_LAUNCHER_VERSION}/appimagelauncher-$APP_IMAGE_LAUNCHER_VERSION-${APP_IMAGE_LAUNCHER_CI_ID}.$(uname -m).rpm"
-    local -r APP_IMAGE_LAUNCHER_DEB_DOWNLOAD_URL="$APP_IMAGE_LAUNCHER_GITHUB_RELEASE_BASE_URL/v${APP_IMAGE_LAUNCHER_VERSION}/appimagelauncher_$APP_IMAGE_LAUNCHER_VERSION-${APP_IMAGE_LAUNCHER_CI_ID}.bionic_${ARCH}.deb"
+    local -r APP_IMAGE_LAUNCHER_RELEASE_BASE_URL="https://github.com/TheAssassin/AppImageLauncher/releases/download"
+
+    local -r APP_IMAGE_LAUNCHER_RPM_DOWNLOAD_URL="$APP_IMAGE_LAUNCHER_RELEASE_BASE_URL/v${APP_IMAGE_LAUNCHER_VERSION}/appimagelauncher-$APP_IMAGE_LAUNCHER_VERSION-${APP_IMAGE_LAUNCHER_CI_ID}.$(uname -m).rpm"
+    local -r APP_IMAGE_LAUNCHER_DEB_DOWNLOAD_URL="$APP_IMAGE_LAUNCHER_RELEASE_BASE_URL/v${APP_IMAGE_LAUNCHER_VERSION}/appimagelauncher_$APP_IMAGE_LAUNCHER_VERSION-${APP_IMAGE_LAUNCHER_CI_ID}.bionic_${ARCH}.deb"
+
     local -r APP_IMAGE_LAUNCHER_DEB_BASENAME=$(basename $APP_IMAGE_LAUNCHER_DEB_DOWNLOAD_URL)
 
     [[ -d $APPIMAGE_DIR ]] || mkdir -p $APPIMAGE_DIR
@@ -216,11 +248,11 @@ base::neovim() {
     common::start_spinner
 
     local -r LATEST_BOB_RELEASE_VERSION=$(curl -s "https://api.github.com/repos/MordechaiHadad/bob/releases/latest" | jq -r '.tag_name')
-    local -r BOB_RELEASE_URL="https://github.com/MordechaiHadad/bob/releases/download/$LATEST_BOB_RELEASE_VERSION/bob-$OS-$(uname -m).zip"
-    local -r BOB_ARCHIVE_NAME=$(basename $BOB_RELEASE_URL)
+    local -r BOB_ARCHIVE_DOWNLOAD_URL="https://github.com/MordechaiHadad/bob/releases/download/$LATEST_BOB_RELEASE_VERSION/bob-$OS-$(uname -m).zip"
+    local -r BOB_ARCHIVE_NAME=$(basename $BOB_ARCHIVE_DOWNLOAD_URL)
 
     [[ $(command -v bob) ]] || {
-        curl -fsSLO --output-dir "$SANDBOX" "$BOB_RELEASE_URL"
+        curl -fsSLO --output-dir "$SANDBOX" "$BOB_ARCHIVE_DOWNLOAD_URL"
         unzip -qq "$SANDBOX/$BOB_ARCHIVE_NAME" -d "$SANDBOX"
         install "$SANDBOX/${BOB_ARCHIVE_NAME%.*}/bob" "$XDG_BIN_HOME/bob"
         bob use stable &>/dev/null && rm -f "$XDG_CONFIG_HOME/bob/config.json"
@@ -966,8 +998,11 @@ cmd::cloudlens() {
     }
 
     local -r CLOUDLENS_VERSION=$(curl -s "https://api.github.com/repos/one2nc/cloudlens/releases/latest" | jq -r '.tag_name')
-    local -r CLOUDLENS_REMOTE_CHECKSUMS="https://github.com/one2nc/cloudlens/releases/download/$CLOUDLENS_VERSION/checksums.txt"
-    local -r CLOUDLENS_ARCHIVE_DOWNLOAD_URL="https://github.com/one2nc/cloudlens/releases/download/$CLOUDLENS_VERSION/cloudlens_${CLOUDLENS_VERSION/v/}_${OS}_${ARCH}.tar.gz"
+    local -r CLOUDLENS_RELEASE_BASE_URL="https://github.com/one2nc/cloudlens/releases/download"
+
+    local -r CLOUDLENS_REMOTE_CHECKSUMS="$CLOUDLENS_RELEASE_BASE_URL/$CLOUDLENS_VERSION/checksums.txt"
+    local -r CLOUDLENS_ARCHIVE_DOWNLOAD_URL="$CLOUDLENS_RELEASE_BASE_URL/$CLOUDLENS_VERSION/cloudlens_${CLOUDLENS_VERSION/v/}_${OS}_${ARCH}.tar.gz"
+
     local -r CLOUDLENS_CHECKSUMS_FILENAME=$(basename $CLOUDLENS_REMOTE_CHECKSUMS)
     local -r CLOUDLENS_ARCHIVE_NAME=$(basename $CLOUDLENS_ARCHIVE_DOWNLOAD_URL)
 
@@ -998,8 +1033,11 @@ cmd::devbox() {
     }
 
     local -r DEVBOX_LATEST_VERSION=$(curl -s "https://api.github.com/repos/jetify-com/devbox/releases/latest" | jq -r '.tag_name')
-    local -r DEVBOX_ARCHIVE_DOWNLOAD_URL="https://github.com/jetify-com/devbox/releases/download/$DEVBOX_LATEST_VERSION/devbox_${DEVBOX_LATEST_VERSION}_${OS}_${ARCH}.tar.gz"
-    local -r DEVBOX_CHECKSUMS_URL="https://github.com/jetify-com/devbox/releases/download/$DEVBOX_LATEST_VERSION/checksums.txt"
+    local -r DEVBOX_RELEASE_BASE_URL="https://github.com/jetify-com/devbox/releases/download"
+
+    local -r DEVBOX_ARCHIVE_DOWNLOAD_URL="$DEVBOX_RELEASE_BASE_URL/$DEVBOX_LATEST_VERSION/devbox_${DEVBOX_LATEST_VERSION}_${OS}_${ARCH}.tar.gz"
+    local -r DEVBOX_CHECKSUMS_URL="$DEVBOX_RELEASE_BASE_URL/$DEVBOX_LATEST_VERSION/checksums.txt"
+
     local -r DEVBOX_ARCHIVE_NAME=$(basename $DEVBOX_ARCHIVE_DOWNLOAD_URL)
     local -r DEVBOX_CHECKSUMS_FILENAME=$(basename $DEVBOX_CHECKSUMS_URL)
 
@@ -1052,8 +1090,11 @@ cmd::tldr() {
     }
 
     local -r TLDR_LATEST_RELEASE_VERSION=$(curl -s "https://api.github.com/repos/tealdeer-rs/tealdeer/releases/latest" | jq -r '.tag_name')
-    local -r TLDR_BIN_DOWNLOAD_URL="https://github.com/tealdeer-rs/tealdeer/releases/download/$TLDR_LATEST_RELEASE_VERSION/tealdeer-${OS}-$(uname -m)-musl"
-    local -r TLDR_SHA256_DOWNLOAD_URL="https://github.com/tealdeer-rs/tealdeer/releases/download/$TLDR_LATEST_RELEASE_VERSION/tealdeer-${OS}-$(uname -m)-musl.sha256"
+    local -r TLDR_RELEASE_BASE_URL="https://github.com/tealdeer-rs/tealdeer/releases/download"
+
+    local -r TLDR_BIN_DOWNLOAD_URL="$TLDR_RELEASE_BASE_URL/$TLDR_LATEST_RELEASE_VERSION/tealdeer-${OS}-$(uname -m)-musl"
+    local -r TLDR_SHA256_DOWNLOAD_URL="$TLDR_RELEASE_BASE_URL/$TLDR_LATEST_RELEASE_VERSION/tealdeer-${OS}-$(uname -m)-musl.sha256"
+
     local -r TLDR_BIN_FILENAME=$(basename $TLDR_BIN_DOWNLOAD_URL)
     local -r TLDR_SHA256_FILENAME=$(basename $TLDR_SHA256_DOWNLOAD_URL)
 
@@ -1103,15 +1144,18 @@ kube::kubectl() {
     }
 
     local -r KUBERLR_VERSION=$(curl -s https://api.github.com/repos/flavio/kuberlr/releases/latest | jq -r '.tag_name')
-    local -r KUBERLR_SHA256_DOWNLOAD_URL="https://github.com/flavio/kuberlr/releases/download/$KUBERLR_VERSION/checksums.txt"
-    local -r KUBERLR_SHA256_FILENAME=$(basename $KUBERLR_SHA256_DOWNLOAD_URL)
-    local -r KUBERLR_ARCHIVE_DOWNLOAD_URL="https://github.com/flavio/kuberlr/releases/download/$KUBERLR_VERSION/kuberlr_${KUBERLR_VERSION//v/}_${OS}_${ARCH}.tar.gz"
+    local -r KUBERLR_RELEASE_BASE_URL="https://github.com/flavio/kuberlr/releases/download"
+
+    local -r KUBERLR_ARCHIVE_DOWNLOAD_URL="$KUBERLR_RELEASE_BASE_URL/$KUBERLR_VERSION/kuberlr_${KUBERLR_VERSION//v/}_${OS}_${ARCH}.tar.gz"
+    local -r KUBERLR_CHECKSUMS_DOWNLOAD_URL="$KUBERLR_RELEASE_BASE_URL/$KUBERLR_VERSION/checksums.txt"
+
+    local -r KUBERLR_CHECKSUMS_FILENAME=$(basename $KUBERLR_CHECKSUMS_DOWNLOAD_URL)
     local -r KUBERLR_ARCHIVE_NAME=$(basename $KUBERLR_ARCHIVE_DOWNLOAD_URL)
 
-    curl -fsSLO --output-dir $SANDBOX $KUBERLR_SHA256_DOWNLOAD_URL
+    curl -fsSLO --output-dir $SANDBOX $KUBERLR_CHECKSUMS_DOWNLOAD_URL
     curl -fsSLO --output-dir $SANDBOX $KUBERLR_ARCHIVE_DOWNLOAD_URL
 
-    local -r KUBERLR_SHA256=$(grep $KUBERLR_ARCHIVE_NAME $SANDBOX/$KUBERLR_SHA256_FILENAME | cut -d' ' -f1)
+    local -r KUBERLR_SHA256=$(grep $KUBERLR_ARCHIVE_NAME $SANDBOX/$KUBERLR_CHECKSUMS_FILENAME | cut -d' ' -f1)
     echo $KUBERLR_SHA256 "$SANDBOX/$KUBERLR_ARCHIVE_NAME" | sha256sum --check --quiet || {
         log::error "$KUBERLR_ARCHIVE_NAME checksum verification failed."
     }
@@ -1130,15 +1174,15 @@ kube::kube_prompt() {
     common::start_spinner
 
     local -r KUBEPROMPT_LATEST_RELEASE_VERSION=$(curl -s "https://api.github.com/repos/c-bata/kube-prompt/releases/latest" | jq -r '.tag_name')
-    local -r KUBEPROMPT_RELEASE_URL="https://github.com/c-bata/kube-prompt/releases/download/$KUBEPROMPT_LATEST_RELEASE_VERSION/kube-prompt_${KUBEPROMPT_LATEST_RELEASE_VERSION}_${OS}_${ARCH}.zip"
-    local -r KUBEPROMPT_ARCHIVE_NAME=$(basename $KUBEPROMPT_RELEASE_URL)
+    local -r KUBEPROMPT_ARCHIVE_DOWNLOAD_URL="https://github.com/c-bata/kube-prompt/releases/download/$KUBEPROMPT_LATEST_RELEASE_VERSION/kube-prompt_${KUBEPROMPT_LATEST_RELEASE_VERSION}_${OS}_${ARCH}.zip"
+    local -r KUBEPROMPT_ARCHIVE_NAME=$(basename $KUBEPROMPT_ARCHIVE_DOWNLOAD_URL)
 
     [[ $(command -v kube-prompt) ]] && {
         common::stop_spinner
         return 0
     }
 
-    curl -fsSLO --output-dir $SANDBOX $KUBEPROMPT_RELEASE_URL
+    curl -fsSLO --output-dir $SANDBOX $KUBEPROMPT_ARCHIVE_DOWNLOAD_URL
     unzip -qq "$SANDBOX/$KUBEPROMPT_ARCHIVE_NAME" -d $SANDBOX
     install "$SANDBOX/kube-prompt" "$XDG_BIN_HOME/kube-prompt"
 
