docs: wiki tmux keybindings updates

--- a/docs/src/content/docs/guides/overview.mdx
+++ b/docs/src/content/docs/guides/overview.mdx
@@ -11,8 +11,8 @@ used by this desktop environment.
 | Category                 | i3                                                                                                                                 | Sway/SwayFx                                                          |
 | ------------------------ | ---------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- |
 | **Compositor**           | [picom](https://picom.app)                                                                                                         | built-in                                                             |
-| **Status Bar**           | [Bumblebee](https://bumblebee-status.readthedocs.io/en/latest) \| [Polybar](https://github.com/polybar/polybar?tab=readme-ov-file) | [Waybar](https://waybar.org/)                                        |
-| **Application Launcher** | [Rofi](https://github.com/davatorium/rofi?tab=readme-ov-file#-rofi-) \| [Albert](https://albertlauncher.github.io)                 | [Rofi](https://github.com/davatorium/rofi?tab=readme-ov-file#-rofi-) |
+| **Status Bar**           | [Bumblebee](https://bumblebee-status.readthedocs.io/en/latest) • [Polybar](https://github.com/polybar/polybar?tab=readme-ov-file) | [Waybar](https://waybar.org/)                                        |
+| **Application Launcher** | [Rofi](https://github.com/davatorium/rofi?tab=readme-ov-file#-rofi-) • [Albert](https://albertlauncher.github.io)                 | [Rofi](https://github.com/davatorium/rofi?tab=readme-ov-file#-rofi-) |
 
 </div>
 
@@ -24,7 +24,7 @@ used by this desktop environment.
 | **Prompt**              | [Starship](https://starship.rs)                                                |
 | **Editor**              | [Neovim](https://neovim.io)                                                    |
 | **Font**                | [JetBrains Mono](https://www.jetbrains.com/lp/mono)                            |
-| **Terminal**            | [Alacritty](https://alacritty.org) \| [Kitty](https://sw.kovidgoyal.net/kitty) |
+| **Terminal**            | [Alacritty](https://alacritty.org) • [Kitty](https://sw.kovidgoyal.net/kitty) |
 | **Multiplexer**         | [Tmux](https://github.com/tmux/tmux/wiki)                                      |
 | **Color Theme**         | Based on [Catppuccin Mocha Palette](https://catppuccin.com/palette)            |
 | **File Manager**        | [Yazi](https://yazi-rs.github.io)                                              |
