docs: wiki tmux keybindings updates

--- a/docs/src/content/docs/keybindings/tmux.mdx
+++ b/docs/src/content/docs/keybindings/tmux.mdx
@@ -66,12 +66,12 @@ A comprehensive reference of all custom keybindings configured in Tmux.
 
 ### Navigation
 
-| Key         | Description              |
-| ----------- | ------------------------ |
-| `Alt+Left`  | Select pane to the left  |
-| `Alt+Right` | Select pane to the right |
-| `Alt+Up`    | Select pane above        |
-| `Alt+Down`  | Select pane below        |
+| Key         | Description       |
+| ----------- | ----------------- |
+| `Alt+Left`  | Select left pane  |
+| `Alt+Right` | Select right pane |
+| `Alt+Up`    | Select pane above |
+| `Alt+Down`  | Select pane below |
 
 ### Management
 
@@ -83,13 +83,13 @@ A comprehensive reference of all custom keybindings configured in Tmux.
 
 ### Resize
 
-| Key              | Description       |
-| ---------------- | ----------------- |
-| `prefix + Up`    | Resize pane up    |
-| `prefix + Down`  | Resize pane down  |
-| `prefix + Left`  | Resize pane left  |
-| `prefix + Right` | Resize pane right |
-| `prefix + z`     | Zoom current pane |
+| Key                    | Description       |
+| ---------------------- | ----------------- |
+| `prefix + Shift+Up`    | Resize pane up    |
+| `prefix + Shift+Down`  | Resize pane down  |
+| `prefix + Shift+Left`  | Resize pane left  |
+| `prefix + Shift+Right` | Resize pane right |
+| `prefix + z`           | Zoom current pane |
 
 ## Commands
 
